Use custom jenkins image
this one has racing stripes

--- a/manifests/deployment-jenkins.yaml
+++ b/manifests/deployment-jenkins.yaml
@@ -20,7 +20,7 @@ spec:
             type: Directory
       containers:
         - name: jenkins
-          image: jenkins/jenkins:lts
+          image: mwdomino/jenkins
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
